--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "types": "dist/index.d.ts",
     "module": "dist/index.mjs",
     "scripts": {
-        "run": "node dist/index.js",
-        "build": "tsup src/index.ts --format cjs,esm --dts",
         "dev": "tsup src/index.ts && node dist/index.js",
+        "build": "tsup src/index.ts --format cjs,esm --dts",
         "release": "pnpm run build && changeset publish",
+        "test": "jest --watchAll --verbose",
         "lint": "tsc"
     },
     "repository": {
